--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
+		"shiki": "^3.20.0",
+		"tm-themes": "^1.10.13",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
