--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "kosei28",
 	"license": "MIT",
 	"devDependencies": {
+		"@codemirror/language": "^6.11.3",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
