--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-	"name": "obsidian-codeblock-highlighter",
-	"version": "1.0.0",
-	"description": "Highlights codeblocks in Obsidian.",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
-	"author": "kosei28",
-	"license": "MIT",
-	"devDependencies": {
-		"@codemirror/language": "^6.11.3",
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"shiki": "^3.20.0",
-		"tm-themes": "^1.10.13",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	}
+  "name": "obsidian-codeblock-highlighter",
+  "version": "1.0.0",
+  "description": "Highlights codeblocks in Obsidian.",
+  "main": "main.js",
+  "scripts": {
+    "dev": "node esbuild.config.mjs",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "version": "node version-bump.mjs && git add manifest.json versions.json"
+  },
+  "keywords": [],
+  "author": "kosei28",
+  "license": "MIT",
+  "devDependencies": {
+    "@biomejs/biome": "2.3.8",
+    "@codemirror/language": "^6.11.3",
+    "@types/node": "^16.11.6",
+    "builtin-modules": "3.3.0",
+    "esbuild": "0.17.3",
+    "obsidian": "latest",
+    "shiki": "^3.20.0",
+    "tm-themes": "^1.10.13",
+    "tslib": "2.4.0",
+    "typescript": "4.7.4"
+  }
 }
