--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@codemirror/language": "^6.11.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.39.4",
     "@types/node": "^16.11.6",
     "builtin-modules": "3.3.0",
     "esbuild": "0.17.3",
     "obsidian": "latest",
     "shiki": "^3.20.0",
-    "tm-themes": "^1.10.13",
     "tslib": "2.4.0",
     "typescript": "4.7.4"
   }
