--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "obsidian-codeblock-highlighter",
-  "name": "Obsidian Codeblock Highlighter",
+  "name": "Codeblock Highlighter",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
   "description": "Highlights codeblocks in Obsidian.",
