--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "obsidian-codeblock-highlighter",
+  "id": "codeblock-highlighter",
   "name": "Codeblock Highlighter",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
