--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "codeblock-highlighter",
-  "name": "Codeblock Highlighter",
-  "version": "1.0.0",
-  "minAppVersion": "0.15.0",
-  "description": "Highlights codeblocks in Obsidian.",
-  "author": "kosei28",
-  "authorUrl": "https://github.com/kosei28",
-  "isDesktopOnly": false
+	"id": "codeblock-highlighter",
+	"name": "Codeblock Highlighter",
+	"version": "1.0.1",
+	"minAppVersion": "0.15.0",
+	"description": "Highlights codeblocks using Shiki. Works seamlessly in all view modes.",
+	"author": "kosei28",
+	"authorUrl": "https://github.com/kosei28",
+	"isDesktopOnly": false
 }
