--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obsidian-codeblock-highlighter",
-  "version": "1.0.0",
-  "description": "Highlights codeblocks in Obsidian.",
+  "version": "1.0.1",
+  "description": "Highlights codeblocks using Shiki. Works seamlessly in all view modes.",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
