--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "obsidian-codeblock-highlighter",
   "version": "1.0.1",
   "description": "Highlights codeblocks using Shiki. Works seamlessly in all view modes.",
+  "type": "module",
   "main": "main.js",
   "scripts": {
-    "dev": "node esbuild.config.mjs",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-    "version": "node version-bump.mjs && git add manifest.json versions.json"
+    "dev": "bun run scripts/build.ts",
+    "build": "tsc -noEmit -skipLibCheck && bun run scripts/build.ts production",
+    "version": "bun run scripts/version-bump.ts && git add manifest.json versions.json",
+    "check": "biome check --write && eslint ."
   },
   "keywords": [],
   "author": "kosei28",
@@ -17,8 +19,11 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.39.4",
     "@types/node": "^16.11.6",
-    "builtin-modules": "3.3.0",
     "esbuild": "0.17.3",
+    "eslint": "^9.39.2",
+    "eslint-config-flat-gitignore": "^2.1.0",
+    "eslint-plugin-obsidianmd": "^0.1.9",
+    "globals": "^16.5.0",
     "obsidian": "latest",
     "shiki": "^3.20.0",
     "tslib": "2.8.1",
